apik8s.yml
# Copyright 2019 Antonio di Giovanni AkA Totolook
#
#   Licensed under the Apache License, Version 2.0 (the "License");
#   you may not use this file except in compliance with the License.
#   You may obtain a copy of the License at
#
#       http://www.apache.org/licenses/LICENSE-2.0
#
#   Unless required by applicable law or agreed to in writing, software
#   distributed under the License is distributed on an "AS IS" BASIS,
#   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#   See the License for the specific language governing permissions and
#   limitations under the License.


##################################################################################################
# Namespace
##################################################################################################

apiVersion: v1
kind: Namespace
metadata:
  name: totolook
---
##################################################################################################
# API1 service
##################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: api1
  namespace: totolook
  labels:
    app: api1
    service: api1
spec:
  ports:
  - port: 8080
    name: http
  selector:
    app: api1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api1-v1
  namespace: totolook
  labels:
    app: api1
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api1
      version: v1
  template:
    metadata:
      labels:
        app: api1
        version: v1
    spec:
      containers:
      - name: api1
        image: api1:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
---
##################################################################################################
# API2 service
##################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: api2
  namespace: totolook
  labels:
    app: api2
    service: api2
spec:
  ports:
  - port: 8080
    name: http
  selector:
    app: api2
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api2-v1
  namespace: totolook
  labels:
    app: api2
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api2
      version: v1
  template:
    metadata:
      labels:
        app: api2
        version: v1
    spec:
      containers:
      - name: api2
        image: api2:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
---
##################################################################################################
# API3 service
##################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: api3
  namespace: totolook
  labels:
    app: api3
    service: api3
spec:
  ports:
  - port: 8080
    name: http
  selector:
    app: api3
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api3-v1
  namespace: totolook
  labels:
    app: api3
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api3
      version: v1
  template:
    metadata:
      labels:
        app: api3
        version: v1
    spec:
      containers:
      - name: api3
        image: api3:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
