apiDestinationRules.yml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: toto-api-mtls
  namespace:
spec:
  host: api1.default.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: toto-api2-mtls
  namespace:
spec:
  host: api2.default.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: toto-api3-mtls
  namespace:
spec:
  host: api3.default.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
