apinet.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: toto-gateway
  namespace: totolook
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: toto-api
  namespace: totolook
spec:
  hosts:
  - "*"
  gateways:
  - toto-gateway
  http:
  - match:
    - uri:
        exact: /
    route:
    - destination:
        host: api1
        port:
          number: 8080
